--- a/EDA Racial Discrimination/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/EDA Racial Discrimination/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -217,129 +217,9 @@
        "      <td>0.0</td>\n",
        "      <td>Nonprofit</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>266</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Private</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Private</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>313</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Nonprofit</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>316</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Private</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>263</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Private</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 65 columns</p>\n",
+       "<p>5 rows × 65 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -349,11 +229,6 @@
        "2  b  1          4       1         6       0          0         0         0   \n",
        "3  b  1          3       4         6       0          1         0         1   \n",
        "4  b  1          3       3        22       0          0         0         0   \n",
-       "5  b  1          4       2         6       1          0         0         0   \n",
-       "6  b  1          4       2         5       0          1         0         0   \n",
-       "7  b  1          3       4        21       0          1         0         1   \n",
-       "8  b  1          4       3         3       0          0         0         0   \n",
-       "9  b  1          4       2         6       0          1         0         0   \n",
        "\n",
        "   occupspecific    ...      compreq  orgreq  manuf  transcom  bankreal trade  \\\n",
        "0             17    ...          1.0     0.0    1.0       0.0       0.0   0.0   \n",
@@ -361,11 +236,6 @@
        "2             19    ...          1.0     0.0    1.0       0.0       0.0   0.0   \n",
        "3            313    ...          1.0     0.0    1.0       0.0       0.0   0.0   \n",
        "4            313    ...          1.0     1.0    0.0       0.0       0.0   0.0   \n",
-       "5            266    ...          0.0     0.0    0.0       0.0       0.0   1.0   \n",
-       "6             13    ...          0.0     0.0    0.0       0.0       0.0   1.0   \n",
-       "7            313    ...          1.0     1.0    0.0       0.0       0.0   0.0   \n",
-       "8            316    ...          0.0     0.0    0.0       0.0       0.0   1.0   \n",
-       "9            263    ...          0.0     0.0    0.0       0.0       0.0   1.0   \n",
        "\n",
        "  busservice othservice  missind  ownership  \n",
        "0        0.0        0.0      0.0             \n",
@@ -373,30 +243,26 @@
        "2        0.0        0.0      0.0             \n",
        "3        0.0        0.0      0.0             \n",
        "4        0.0        1.0      0.0  Nonprofit  \n",
-       "5        0.0        0.0      0.0    Private  \n",
-       "6        0.0        0.0      0.0    Private  \n",
-       "7        0.0        1.0      0.0  Nonprofit  \n",
-       "8        0.0        0.0      0.0    Private  \n",
-       "9        0.0        0.0      0.0    Private  \n",
        "\n",
-       "[10 rows x 65 columns]"
+       "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.io.stata.read_stata('data/us_job_market_discrimination.dta')\n",
-    "df.head(10)"
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -427,37 +293,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What test is appropriate for this problem? Does CLT apply?\n",
+    "A two-sampled z-test for proportions would be appropriate for this problem, and the Central Limit Theorem would apply provided four conditions hold true:\n",
+    "1. The data was collected as a simple random sample of the population.\n",
+    "2. Each observation is independent of other observations in the sample.\n",
+    "3. For each sample, there are at least 10 successes and at least 10 failures.\n",
+    "4. The population from which the sample is collected is at least 20 times greater than the sample.\n",
+    "\n",
+    "Condition 1 is given by the problem statement. Condition 2 is implied by Condition 1. Condition 4 can be safely assumed. Condition 3 is satisifed as evidenced by the chart below."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>race</th>\n",
+       "      <th>b</th>\n",
+       "      <th>w</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>call</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>2278</td>\n",
+       "      <td>2200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>157</td>\n",
+       "      <td>235</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "157.0"
+       "race     b     w\n",
+       "call            \n",
+       "0.0   2278  2200\n",
+       "1.0    157   235"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# number of callbacks for black-sounding names\n",
-    "sum(data[data.race=='b'].call)"
+    "df.groupby(['race','call']).size().unstack('race')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What are the null and alternate hypotheses?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $p_b$ represent the proportion of resumes with black names that received callbacks, and let $p_w$ represent the proportion of resumes with white names that received callbacks.\n",
+    "\n",
+    "$H_0: p_b - p_w = 0 \\\\\n",
+    "H_A: p_b - p_w < 0$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "point estimate: -0.0320328542094\n",
+      "confidence_interval: [-0.04728798 -0.01677773]\n",
+      "margin of error: 0.0152551260282\n",
+      "p-value: 1.93128260376e-05\n"
+     ]
+    }
+   ],
    "source": [
-    "data.head()"
+    "n_b = len(df[df.race == 'b']) # number of resumes with black names\n",
+    "n_w = len(df[df.race == 'w']) # number of resumes with white names\n",
+    "x_b = sum(df[df.race == 'b'].call) # number of resumes with black names that received callbacks\n",
+    "x_w = sum(df[df.race == 'w'].call) # number of resumes with black names that received callbacks\n",
+    "p_b = x_b / n_b # proportion of resumes with black names that received callbacks\n",
+    "p_w = x_w / n_w # proportion of resumes with white names that received callbacks\n",
+    "v_b = p_b * (1 - p_b) / n_b # variance black resumes\n",
+    "v_w = p_w * (1 - p_w) / n_w # variance white resumes\n",
+    "\n",
+    "# margin of error = critical value * standard error\n",
+    "# confidence interval = point estimate +/- margin of error\n",
+    "# confidence level = 0.95\n",
+    "\n",
+    "point_estimate = p_b - p_w\n",
+    "standard_error = np.sqrt(v_b + v_w)\n",
+    "margin_of_error = stats.norm.ppf(.975) * standard_error\n",
+    "confidence_interval = point_estimate + np.array([-1,1]) * margin_of_error\n",
+    "\n",
+    "# hypothesis test\n",
+    "z_statistic = point_estimate / standard_error\n",
+    "p_value = stats.norm.cdf(z_statistic)\n",
+    "\n",
+    "print('point estimate:',point_estimate)\n",
+    "print('confidence_interval:',confidence_interval)\n",
+    "print('margin of error:',margin_of_error)\n",
+    "print('p-value:',p_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Write a story describing the statistical significance in the context or the original problem.\n",
+    "In the sample data collected, resumes with black applicant names received 3.2% fewer callbacks than those with white applicant names. To check if this difference was statistically significant, a hypothesis test with a 95% confidence level was conducted, resulting in a p-value of $1.93\\times10^{-5} < .05$. Thus, it can be claimed with 95% confidence that resumes with black applicant names do in fact experience lower rates of callback success."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Does your analysis mean that race/name is the most important factor in callback success? Why or why not? If not, how would you amend your analysis?\n",
+    "While a statistically significant difference in callback rates between resumes with black and white applicant names was detected, the data does not provide a basis for claiming that race/name is the most important factor in callback success. One would have to check each variable to see if differentiation by that attribute results in a greater disparity in callback rates so as to account for the possibility of confounding factors."
    ]
   },
   {
