edit ML Heights and Weights

--- a/ML Heights and Weights/Mini_Project_Logistic_Regression.ipynb
+++ b/ML Heights and Weights/Mini_Project_Logistic_Regression.ipynb
@@ -496,6 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "<div class=\"span5 alert alert-info\">\n",
     "<h3>Checkup Exercise Set IV</h3>\n",
     "\n",
@@ -503,7 +504,9 @@
     "\n",
     "* Instead of writing your own loops above to iterate over the model parameters, can you use GridSearchCV to find the best model over the training set? \n",
     "* Does it give you the same best value of `C`?\n",
-    "* How does this model you've obtained perform on the test set?"
+    "* How does this model you've obtained perform on the test set?\n",
+    "\n",
+    "---"
    ]
   },
   {
