edit ML Heights and Weights

--- a/ML Heights and Weights/Mini_Project_Logistic_Regression.ipynb
+++ b/ML Heights and Weights/Mini_Project_Logistic_Regression.ipynb
@@ -496,9 +496,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "<div class=\"span5 alert alert-info\">\n",
-    "<h3>Checkup Exercise Set IV</h3>\n",
+    "\n",
+    "Checkup Exercise Set IV\n",
     "\n",
     "<b>Exercise:</b> Use scikit-learn's [GridSearchCV](http://scikit-learn.org/stable/modules/generated/sklearn.grid_search.GridSearchCV.html) tool to perform cross validation and grid search. \n",
     "\n",
